Prevents Home Gesture from handling down-swipes on shelf

Bug: 896790
Change-Id: I2d8de828cea27caa210755a0de8304ee293e55f9
Reviewed-on: https://chromium-review.googlesource.com/c/1307233
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604007}
Former-commit-id: 88f31b8e5396daa6d0e4570df76b5e5aa7b302c2